# more-rs-cqrs

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  getting-started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-8487eb3b.js  searchindex.js  searchindex.json  toc-9d3d847f.js  toc.html  toc.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cqrs/: Cargo.toml  README.md
cqrs-macros/: Cargo.toml  README.md
cqrs-macros/src/: aggregate.rs  config.rs  event.rs  lib.rs  projectors.rs  snapshot.rs  transcode.rs
cqrs-nosql/: Cargo.toml  README.md
cqrs-nosql/src/: dynamodb.rs  lib.rs  version.rs
cqrs-nosql/src/di/: dynamodb.rs
cqrs-nosql/src/dynamodb/: builder.rs  event.rs  migration.rs  snapshot.rs
cqrs-nosql/src/prelude/: di.rs
cqrs-nosql/src/prelude/di/: dynamodb.rs
cqrs-sql/: Cargo.toml  README.md
cqrs-sql/src/: builder.rs  di.rs  event.rs  lib.rs  migrate.rs  prelude.rs  providers.rs  snapshot.rs  sql.rs  version.rs
cqrs-sql/src/di/: builder.rs  migration.rs  mysql.rs  options.rs  postgres.rs  sqlite.rs
cqrs-sql/src/event/: command.rs  store.rs
cqrs-sql/src/migrate/: migration.rs  migrator.rs
cqrs-sql/src/prelude/: di.rs
cqrs-sql/src/prelude/di/: builder.rs  migration.rs  mysql.rs  options.rs  postgres.rs  sqlite.rs
cqrs-sql/src/providers/: mysql.rs  postgres.rs  sqlite.rs
cqrs-sql/src/providers/mysql/: migration.rs
cqrs-sql/src/providers/postgres/: migration.rs
cqrs-sql/src/providers/sqlite/: command.rs  event_command.rs  event_store.rs  migration.rs  snapshot_command.rs  snapshot_store.rs
cqrs-sql/src/snapshot/: command.rs  prune.rs  store.rs  upsert.rs
cqrs-sql/src/sql/: command.rs  ident.rs  row.rs
cqrs-sql/tests/: postgres.rs  sqlite.rs
cqrs-sql/tests/common/: domain.rs  mod.rs  scenario.rs
cqrs/src/: aggregate.rs  builder.rs  clock.rs  command.rs  concurrency.rs  di.rs  encoding.rs  event.rs  lib.rs  mask.rs  mem.rs  message.rs  migration.rs  projection.rs  range.rs  repository.rs  snapshot.rs  version.rs
cqrs/src/command/: handler.rs  message.rs
cqrs/src/di/: builder.rs  mem.rs
cqrs/src/encoding/: cbor.rs  json.rs  message_pack.rs  protobuf.rs
cqrs/src/event/: delete.rs  message.rs  predicate.rs  receiver.rs  store.rs
cqrs/src/message/: descriptor.rs  encoded.rs  encoding.rs  msg.rs  saved.rs  schema.rs  transcoder.rs
cqrs/src/prelude/: di.rs
cqrs/src/prelude/di/: mem.rs  options.rs
cqrs/src/projection/: filter.rs  projector.rs
cqrs/src/snapshot/: message.rs  predicate.rs  retention.rs  store.rs
cqrs/tests/: aggregate.rs  projection.rs  snapshot.rs  store.rs  transcoder.rs
cqrs/tests/common/: domain.rs  mod.rs  projector.rs
examples/basic/: Cargo.toml  README.md  simplest-possible-thing.rs
examples/dynamodb/: Cargo.toml  README.md
examples/dynamodb/orders/: item.rs  main.rs  order.rs
examples/postgres/: Cargo.toml  README.md
examples/postgres-orders/: Cargo.toml  README.md
examples/postgres-orders/src/: main.rs
examples/postgres/orders/: main.rs
examples/simplest-possible-thing/: Cargo.toml  README.md
examples/sqlite/: Cargo.toml  README.md
examples/sqlite/orders/: events.rs  item.rs  main.rs  order.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md  getting-started.md
