[package]
name = "more-cqrs-macros"
readme = "README.md"
description = "Generate events, commands, transcoders, and more for CQRS"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "cqrs_macros"
proc-macro = true
doctest = false

[features]
config = ["dep:fs-err", "dep:serde", "dep:toml"]
prost = ["config"]

[dependencies]
cfg-if = { workspace = true }
fs-err = { version = "2", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true, features = ["derive"], optional = true }
syn = { version = "2.0", features = ["full"] }
toml = { version = "0.8", optional = true }

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
