[package]
name = "more-cqrs-macros"
readme = "README.md"
description = "Generate events, commands, transcoders, and more for CQRS"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "cqrs_macros"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
