[package]
name = "more-cqrs"
readme = "README.md"
description = "Command Query Responsibility Segregation (CQRS) in Rust"
keywords = ["cqrs", "messaging"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "cqrs"

[features]
mem = []
di = ["dep:more-di"]
cbor = ["dep:ciborium", "dep:serde", "uuid/serde"]
json = ["dep:serde_json", "dep:serde", "uuid/serde"]
message-pack = ["dep:rmp-serde", "dep:serde", "uuid/serde"]
protobuf = ["dep:prost", "more-cqrs-macros/prost"]

[dependencies]
more-cqrs-macros = { path = "../cqrs-macros" }
async-stream = { workspace = true }
async-trait = { workspace = true }
cfg-if = { workspace = true }
ciborium = { version = "0.2", optional = true }
futures = { workspace = true }
futures-core = { workspace = true }
more-di = { workspace = true, features = ["async"], optional = true }
prost = { version = "0.13", optional = true }
rc2 = "0.8"
rmp-serde = { version = "1.3", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
more-cqrs = { path = ".", features = ["di", "mem", "json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
