[package]
name = "basic-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3"
more-cqrs = { path = "../../cqrs", features = ["di", "mem", "protobuf"] }
more-di = { version = "3.1", features = ["async"] }
prost = "0.13"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }

[[example]]
name = "simplest-possible-thing"
path = "simplest-possible-thing.rs"