[package]
name = "basic-examples"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
futures.workspace = true
more-cqrs = { path = "../../cqrs", features = ["di", "mem", "protobuf"] }
more-di = { workspace = true, features = ["async"] }
prost = "0.14"
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[[example]]
name = "simplest-possible-thing"
path = "simplest-possible-thing.rs"