[package]
name = "dynamodb-examples"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
aws-config = "1.8"
aws-sdk-dynamodb = "1.101"
futures.workspace = true
more-cqrs = { path = "../../cqrs", features = ["di", "protobuf"] }
more-cqrs-nosql = { path = "../../cqrs-nosql", features = ["di", "dynamodb", "migrate"] }
more-di = { workspace = true, features = ["async"] }
prost = "0.14"
testcontainers-modules = { workspace = true, features = ["dynamodb"] }
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }


[[example]]
name = "dynamodb-orders"
path = "orders/main.rs"