[package]
name = "postgres-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3"
more-cqrs = { path = "../../cqrs", features = ["di", "protobuf"] }
more-cqrs-sql = { path = "../../cqrs-sql", features = ["di", "postgres", "migrate"] }
more-di = { version = "3.1", features = ["async"] }
prost = "0.13"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
thiserror = "1.0"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }


[[example]]
name = "postgres-orders"
path = "orders/main.rs"