[package]
name = "sqlite-examples"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
futures.workspace = true
more-cqrs = { path = "../../cqrs", features = ["di", "protobuf"] }
more-cqrs-sql = { path = "../../cqrs-sql", features = ["di", "sqlite", "migrate"] }
more-di = { workspace = true, features = ["async"] }
prost = "0.14"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }


[[example]]
name = "sqlite-orders"
path = "orders/main.rs"